--- a/apps/portal/tsconfig.json
+++ b/apps/portal/tsconfig.json
@@ -4,7 +4,9 @@
     "paths": {
       "@/*": ["./src/*"]
     },
-    "moduleResolution": "bundler"
+    "moduleResolution": "bundler",
+    "module": "ESNext",
+    "target": "ES2022",
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
   "exclude": ["node_modules"]
